# MiniCPM-o.cpp

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  README_ZH.md  pyproject.toml
cmake/: FindFFMPEG.cmake
docs/: install_EN.md  install_ZH.md  install_en.md  install_zh.md  report_EN.md  report_ZH.md
examples/: CMakeLists.txt  common.cpp  common.h  macos_stream.cpp  macos_stream.h  video_decoder.cpp  video_decoder.h
examples/minicpmo/: CMakeLists.txt  README.md  bench.cpp  cli.cpp  cli_macos_stream.cpp  minicpmo-convert-audio-encoder-to-gguf.py  minicpmo-convert-image-encoder-to-gguf.py  minicpmo-convert_hf_to_gguf.py  minicpmo-surgery.py
examples/quantize/: CMakeLists.txt  README.md  quantize.cpp
include/: minicpmo.h  outetts.h  siglip.h  utils.h  whisper_encoder.h
src/: CMakeLists.txt  minicpmo.cpp  outetts.cpp  siglip.cpp  utils.cpp  whisper_encoder.cpp
src/minicpmo_cpp/: __init__.py  model.py
src/minicpmo_cpp/csrc/: minicpmo_iface.hpp  pybind.cpp
test/: test_minicpmo.py
web_demos/minicpm-o_2.6/: README.md  model_server.py  requirements.txt
web_demos/minicpm-o_2.6/web_server/: .eslintrc-auto-import.json  Dockerfile  README.md  cert.pem  index.html  key.pem  package-lock.json  vite.config.js
web_demos/minicpm-o_2.6/web_server/src/apis/: index.js
web_demos/minicpm-o_2.6/web_server/src/components/ModelConfig/: index.vue
web_demos/minicpm-o_2.6/web_server/src/components/ModelOutput/: index.vue
web_demos/minicpm-o_2.6/web_server/src/enums/: index.js
web_demos/minicpm-o_2.6/web_server/src/i18n/: en.json  zh.json
web_demos/minicpm-o_2.6/web_server/src/views/home/: index.vue
web_demos/minicpm-o_2.6/web_server/src/views/home/components/: VideoCall.vue  VoiceCall.vue
